@@ -8,6 +8,7 @@ import com.blog.repository.ArticleRepository;
 import com.blog.repository.TagRepository;
 import com.blog.repository.UserRepository;
 import com.blog.repository.UserViewHistoryRepository;
+import jakarta.transaction.Transactional;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
@@ -18,7 +19,6 @@ import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 public class ArticleService {
@@ -52,7 +52,7 @@ public class ArticleService {
         // 设置作者
         User author = userRepository.findById(dto.getAuthorId()) .orElseThrow(() -> new RuntimeException("User not found")); article.setAuthor(author);
         article.setAuthor(author);
-        // 设置标签
+
         // 设置标签（支持字符串标签名）
         List<Tag> tagEntities = new ArrayList<>();
         for (String tagName : dto.getTags()) {
@@ -178,21 +178,45 @@ public class ArticleService {
      * @param userId 用户ID
      * @return 推荐的文章列表
      */
-    public List<Article>recommendArticles(Long userId){
-        //获取用户浏览过的文章ID列表
+    /**
+     * 基于用户浏览历史推荐文章（协同过滤 + 标签权重）
+     */
+    public List<Article> recommendArticles(Long userId) {
+
+        // 1. 查询用户浏览过的文章 ID
         List<Long> viewedArticleIds = userViewHistoryRepository.findViewedArticleIds(userId);
 
-        if(viewedArticleIds.isEmpty()){
-            //如果没有浏览历史，返回热门文章
+        // 2. 如果没有浏览历史 → 返回热门文章
+        if (viewedArticleIds.isEmpty()) {
             return getHotArticles(10);
         }
 
-        //根据浏览过的文章统计标签信息
+        // 3. 统计用户浏览文章的标签权重（使用你已经写好的 findTopTags）
         List<String> topTags = getTopTagsFromArticle(viewedArticleIds);
 
-        //返回推荐的文章
-        return articleRepository.findArticlesByTags(topTags);
+        if (topTags.isEmpty()) {
+            return getHotArticles(10);
+        }
+
+        // 4. 根据标签查找相关文章（按阅读量排序）
+        List<Article> candidates = articleRepository.findArticlesByTags(topTags);
+
+        // 5. 过滤掉用户已经看过的文章、私密文章、粉丝可见文章（如果不是粉丝）
+        List<Article> filtered = candidates.stream()
+                .filter(a -> !viewedArticleIds.contains(a.getId())) // 不推荐看过的
+                .filter(a -> a.getVisibility() == Article.ArticleVisibility.PUBLIC) // 只推荐公开文章
+                .filter(a -> !a.getAuthor().getId().equals(userId)) // 不推荐自己的文章
+                .limit(10) // 限制数量
+                .toList();
+
+        // 6. 如果过滤后为空 → fallback 到热门文章
+        if (filtered.isEmpty()) {
+            return getHotArticles(10);
+        }
+
+        return filtered;
     }
+
 
     /**
      * 获取文章的标签并返回出现频率最高的标签
@@ -202,19 +226,22 @@ public class ArticleService {
      */
     private List<String>getTopTagsFromArticle(List<Long>articleIds){
         List<String>topTags = new ArrayList<>();
-
-        //获取文章的标签信息
-        for(Long articleId : articleIds){
-            List<Tag>tags = articleRepository.findById(articleId).get().getTags();
-            for(Tag tag : tags){
-                topTags.add(tag.getName());//将标签名称加入到列表
-            }
-        }
-
         //获取出现频率最多的前3个标签
-        return topTags.stream()
-                .distinct()
+        List<Object[]> rows = articleRepository.findTopTags(articleIds);
+        return rows.stream()
+                .map(row -> (String) row[0]) // 标签名
                 .limit(3)
-                .collect(Collectors.toList());
+                .toList();
     }
+
+    //通过作者id查找文章
+    public List<Article> getArticleByAuthorId(Long authorId) {
+        return articleRepository.findByAuthorId(authorId);
+    }
+
+    @Transactional
+    public void incrementViewCount(Long id) {
+        articleRepository.incrementViewCount(id);
+    }
+
 }
